[package]
name = "shepplogan"
version = "1.0.1"
edition = "2018"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Shepp-Logan phantom"
documentation = "https://stefan-k.github.io/shepplogan-rs/shepplogan/"
homepage = "https://github.com/stefan-k/shepplogan-rs"
repository = "https://github.com/stefan-k/shepplogan-rs"
readme = "README.md"
keywords = ["phantom", "medical", "image", "processing", "reconstruction"]
categories = ["science", "rendering"]
#license-file = "LICENSE-APACHE"
exclude = [ 
	".travis.yml",
	"push_docs",
]

[dependencies]
rayon = {version = "1.0", optional = true}

[dev-dependencies]
image = "0.22.3"

[features]
default = []
parallel = ["rayon"]
slow_impl = []

[badges]
travis-ci = { repository = "stefan-k/shepplogan-rs", branch = "master" }
