[package]
name = "shepplogan"
version = "1.0.1"
edition = "2021"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Shepp-Logan phantom"
documentation = "https://stefan-k.github.io/shepplogan-rs/shepplogan/"
homepage = "https://github.com/stefan-k/shepplogan-rs"
repository = "https://github.com/stefan-k/shepplogan-rs"
readme = "README.md"
keywords = ["phantom", "medical", "image", "processing", "reconstruction"]
categories = ["science", "rendering"]
exclude = [ 
	"push_docs",
]

[dependencies]

[dev-dependencies]
approx = "0.5.1"
image = "0.25.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
default = []
